--- a/examples/operations.html
+++ b/examples/operations.html
@@ -26,6 +26,6 @@
   </div>
   <br>
   <input id="threshold" type="range" min="0" max="255">
-  <script src="../dist/pxl.js"></script>
+  <script src="../dist/pixelworks.js"></script>
   <script src="operations.js"></script>
 </body>
